javacc-demo/src/main/java/com/jimo/parser/demo01/BraceDemo.jj
options {
    STATIC = true;
}

PARSER_BEGIN(BraceDemo)

package com.jimo.parser.demo01;

public class BraceDemo {

    public static void main(String[] args) throws Exception{
        final BraceDemo b = new BraceDemo(System.in);
        b.input();
    }
}
PARSER_END(BraceDemo)

SKIP : {
    " "
    | "\t"
    | "\n"
    | "\r"
}

void input():
{}
{
    MatchedBraces() <EOF>
}

void MatchedBraces():
{}
{
    "{" [ MatchedBraces() ] "}"
}
